# CW_3_by_function

./: .coverage  .gitignore  README.md  mail.py  pyproject.toml  settings.py
src/: utils.py
tests/: test_utils.py
