[tool.poetry]
name = "cw-3-by-function"
version = "0.1.0"
description = ""
authors = ["Dmitry Zadorozhnyy <zadorozhnyy_d_m@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.2.0"
pytest-cov = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
